<resources>
    <!-- App strings -->
    <string translatable="false" name="app_name">Hangman</string>

    <!-- Main menu strings -->
    <string name="menu_option_play">Play</string>
    <string name="menu_option_tutorial">How to Play</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_exit">Exit</string>
    <string name="alert_title_tutorial">How to Play</string>
    <string name="alert_text_tutorial">The goal of the game is to guess a word before the innocent
        stick figure gets hanged. You guess the word by guessing on letter the word might contain.
        If you guess wrong the figure gets gradually closer to being hanged.</string>
    <string name="alert_positive_tutorial">OK</string>

    <!-- Game strings -->
    <string name="title_activity_game">Game activity</string>

    <string name="rounds_progress">Rounds: %1$d/%2$d</string>
    <string name="rounds_won">Won: %d</string>
    <string name="rounds_lost">Lost: %d</string>
    <string name="alert_title_endgame">Play again?</string>
    <string name="alert_text_endgame">Do you want to start a new game?</string>
    <string name="alert_positive_endgame">Yes</string>
    <string name="alert_negative_endgame">No</string>

    <string translatable="false" name="key_a">a</string>
    <string translatable="false" name="key_b">b</string>
    <string translatable="false" name="key_c">c</string>
    <string translatable="false" name="key_d">d</string>
    <string translatable="false" name="key_e">e</string>
    <string translatable="false" name="key_f">f</string>
    <string translatable="false" name="key_g">g</string>
    <string translatable="false" name="key_h">h</string>
    <string translatable="false" name="key_i">i</string>
    <string translatable="false" name="key_j">j</string>
    <string translatable="false" name="key_k">k</string>
    <string translatable="false" name="key_l">l</string>
    <string translatable="false" name="key_m">m</string>
    <string translatable="false" name="key_n">n</string>
    <string translatable="false" name="key_o">o</string>
    <string translatable="false" name="key_p">p</string>
    <string translatable="false" name="key_q">q</string>
    <string translatable="false" name="key_r">r</string>
    <string translatable="false" name="key_s">s</string>
    <string translatable="false" name="key_t">t</string>
    <string translatable="false" name="key_u">u</string>
    <string translatable="false" name="key_v">v</string>
    <string translatable="false" name="key_w">w</string>
    <string translatable="false" name="key_x">x</string>
    <string translatable="false" name="key_y">y</string>
    <string translatable="false" name="key_z">z</string>

    <string translatable="false" name="key_æ">æ</string>
    <string translatable="false" name="key_ø">ø</string>
    <string translatable="false" name="key_å">å</string>

    <!-- Settings strings -->
    <string name="title_activity_settings">Settings</string>

    <string name="setting_title_language">Language</string>
    <string-array name="setting_languages_titles">
        <item>English</item>
        <item>Norsk</item>
    </string-array>
    <string-array name="setting_languages_values">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
