<?xml version="1.0" encoding="utf-8"?>
<!-- ref: https://github.com/google/flexbox-layout -->
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keyboard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:flexWrap="wrap"
    app:justifyContent="center"
    app:alignItems="flex_start"
    app:alignContent="flex_start"
    app:layout_constraintTop_toBottomOf="@+id/word_view">

    <Button
        android:id="@+id/key_a"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_a" />

    <Button
        android:id="@+id/key_b"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_b" />

    <Button
        android:id="@+id/key_c"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_c" />

    <Button
        android:id="@+id/key_d"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_d" />

    <Button
        android:id="@+id/key_e"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_e" />

    <Button
        android:id="@+id/key_f"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_f" />

    <Button
        android:id="@+id/key_g"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_g" />

    <Button
        android:id="@+id/key_h"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_h" />

    <Button
        android:id="@+id/key_i"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_i" />

    <Button
        android:id="@+id/key_j"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_j" />

    <Button
        android:id="@+id/key_k"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_k" />

    <Button
        android:id="@+id/key_l"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_l" />

    <Button
        android:id="@+id/key_m"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_m" />

    <Button
        android:id="@+id/key_n"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_n" />

    <Button
        android:id="@+id/key_o"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_o" />

    <Button
        android:id="@+id/key_p"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_p" />

    <Button
        android:id="@+id/key_q"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_q" />

    <Button
        android:id="@+id/key_r"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_r" />

    <Button
        android:id="@+id/key_s"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_s" />

    <Button
        android:id="@+id/key_t"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_t" />

    <Button
        android:id="@+id/key_u"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_u" />

    <Button
        android:id="@+id/key_v"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_v" />

    <Button
        android:id="@+id/key_w"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_w" />

    <Button
        android:id="@+id/key_x"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_x" />

    <Button
        android:id="@+id/key_y"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_y" />

    <Button
        android:id="@+id/key_z"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="onKeyPress"
        android:text="@string/key_z" />
</com.google.android.flexbox.FlexboxLayout>