<?xml version="1.0" encoding="utf-8"?>
<!-- TODO: Add background image -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".MainMenuActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Change font, increase size, set texture and add some decorations -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >

            <!-- TODO: Change font and button style -->
            <Button
                android:id="@+id/play_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onButtonTouch"
                android:text="@string/menu_option_play"
                android:textSize="20sp" />

            <!-- TODO: Change font and button style -->
            <Button
                android:id="@+id/tutorial_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onButtonTouch"
                android:text="@string/menu_option_tutorial"
                android:textSize="20sp" />

            <!-- TODO: Change font and button style -->
            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onButtonTouch"
                android:text="@string/menu_option_settings"
                android:textSize="20sp" />

            <!-- TODO: Change font and button style -->
            <Button
                android:id="@+id/exit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onButtonTouch"
                android:text="@string/menu_option_exit"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>